fix/ spacing

--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,6 @@
 @import "tailwindcss";
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
-*,
-::after,
-::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 
 @theme {
   /*Font*/
